search reworked hover propdown oidc pre

--- a/kooplexhub/hub/templates/container/list.html
+++ b/kooplexhub/hub/templates/container/list.html
@@ -19,11 +19,7 @@
 {% block navsearch %}
 <form class="d-flex" action="{% url 'service:l_search' %}" method="post">
   {% csrf_token %}
-  <input class="form-control me-2" type="search" name="service" placeholder="Search environment" 
-    {% if search_value %}  
-      value="{{ search_value }}" 
-    {% endif %}  
-      aria-label="Search">
+  <input class="form-control me-2" type="search" name="service" placeholder="Search environment" value="{{ user.search.service_list }}" aria-label="Search">
   <button class="btn btn-outline-secondary" type="submit" name="button" value="search">Search</button>
 </form>
 {% endblock %}
