--- a/kooplexhub/hub/templates/project/project_submenu.html
+++ b/kooplexhub/hub/templates/project/project_submenu.html
@@ -18,6 +18,9 @@
 	      {% endif %}
 	    {% endwith %}
           </a></li>
+	  {% comment %}
+	  <li class="nav-item"><a {% if submenu == 'configure' %} class="nav-link active" href="#" {% else %} class="nav-link" href="#" {% endif %}>Configure project </a></li>
+	  {% endcomment %}
         </ul>
      </div>
   </div>
