--- a/kooplexhub/hub/templates/navbarmenu_right.html
+++ b/kooplexhub/hub/templates/navbarmenu_right.html
@@ -19,10 +19,11 @@
     <li><a class="dropdown-item" href="#" data-toggle="modal" data-target="#reset-token">Reset token</a></li>
    {% else %}
     <li><a class="dropdown-item" href="{% url 'social:begin' 'hydraoidc' %}">Log in <span class="oi oi-account-login"></span></a>
+    <li><a class="dropdown-item" href="{% url 'social:begin' 'kooplex' %}">Log in <span class="oi oi-account-login"></span></a>
    {% endif %}
     <li><hr class="dropdown-divider"></li>
     <li><a class="dropdown-item" href="https://github.com/kooplex/kooplex-hub/wiki" target="_blank">Kooplex Hub Wiki</a></li>
     <li><a class="dropdown-item" href="#" data-toggle="modal" data-target="#about-contacts">Contacts and about</a></li>
   </ul>
-</li>
+</ul>
 
