--- a/kooplexhub/hub/templates/project/configure.html
+++ b/kooplexhub/hub/templates/project/configure.html
@@ -9,54 +9,98 @@
 {% block main_content_center %}
 <form id="project-manage" class="form-horizontal" action="{% url 'project:configure' project.id %}" method="post">
 {% csrf_token %}
+
   <ul class="nav nav-tabs" id="projectConfigTabs" role="tablist">
     <li class="nav-item" role="presentation">
-      <a class="nav-link" id="tab-meta" data-bs-toggle="tab" href="#meta" role="tab" aria-controls="meta" aria-selected="false">Meta</a>
-    </li>
-    <li class="nav-item active" role="presentation">
-      <a class="nav-link" id="tab-collaboration" data-bs-toggle="tab" href="#collaboration" role="tab" aria-controls="collaboration" aria-selected="true">Collaboration</a>
+      <a class="nav-link {% if active == "meta" %}active{% endif %}" id="tab-meta" data-bs-toggle="tab" href="#meta" role="tab" aria-controls="meta" aria-selected="{% if active == "meta" %}true{% else %}false{% endif %}">Meta</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a class="nav-link" id="tab-service" data-bs-toggle="tab" href="#service" role="tab" aria-controls="service" aria-selected="false">Service environments</a>
+      <a class="nav-link {% if active == "collaboration" %}active{% endif %}" id="tab-collaboration" data-bs-toggle="tab" href="#collaboration" role="tab" aria-controls="collaboration" aria-selected="{% if active == "collaboration" %}true{% else %}false{% endif %}">Collaboration</a>
+    </li>
+    <li class="nav-item" role="presentation">
+      <a class="nav-link {% if active == "service" %}active{% endif %}" id="tab-service" data-bs-toggle="tab" href="#service" role="tab" aria-controls="service" aria-selected=""{% if active == "service" %}true{% else %}false{% endif %}>Service</a>
     </li>
   </ul>
-  <div class="tab-content" id="projectConfigTabContent">
-    <div class="tab-pane fade" id="meta" role="tabpanel" aria-labelledby="tab-meta">
-        <input type="hidden" name="active_tab" value="meta">
-        <h5 class="card-title">Describe your project</h5>
-        <textarea class="form-control" rows="6" cols="50" id="description" name="description">{{ project.description }}</textarea>
-        <h5 class="card-title">Change the scope for this project</h5>
-        <select id="project_scopes-{{ project.id }}" name="project_scope">
-          {% for k, v in project.SCP_LOOKUP.items %}
-            <option value="{{ k }}" {% if project.scope == k %} selected {% endif %}>{{ v }}</option>
-          {% endfor %}
-        </select>
+  <div class="tab-content" id="projectConfogTabsContent">
+    <div class="tab-pane fade {% if active == "meta" %}show active{% endif %}" id="meta" role="tabpanel" aria-labelledby="tab-meta">
+      <h5 class="card-title">Describe your project</h5>
+      <textarea class="form-control" rows="6" cols="50" id="description" name="description">{{ project.description }}</textarea>
+      <h5 class="card-title">Change the scope for this project</h5>
+      <select id="project_scopes-{{ project.id }}" name="project_scope">
+        {% for k, v in project.SCP_LOOKUP.items %}
+          <option value="{{ k }}" {% if project.scope == k %} selected {% endif %}>{{ v }}</option>
+        {% endfor %}
+      </select>
     </div>
-    <div class="tab-pane fade show active" id="collaboration" role="tabpanel" aria-labelledby="tab-collaboration">
-        <input type="hidden" name="active_tab" value="collaboration">
-        <h5 class="card-title">Select collaborators of this project</h5>
-        {% if t_collaborators %}
-          {% render_table t_collaborators %}
-  	<hr>
-          <h5 class="card-title">Select environments to create for your collaborators</h5>
-  	Your collaborators are free to change this environment later.
-  	{% render_table t_services %}
-        {% else %}
-          You cannot manage collaboration of this project.
-        {% endif %}
+    <div class="tab-pane fade {% if active == "collaboration" %}show active{% endif %}" id="collaboration" role="tabpanel" aria-labelledby="tab-collaboration">
+      <h5 class="card-title">Select collaborators of this project</h5>
+      {% if t_collaborators %}
+        {% render_table t_collaborators %}
+        <hr>
+        <h5 class="card-title">Select environments to create for your collaborators</h5>
+        Your collaborators are free to change this environment later.
+        {% render_table t_services %}
+      {% else %}
+        You cannot manage collaboration of this project.
+      {% endif %}
     </div>
-    <div class="tab-pane fade" id="service" role="tabpanel" aria-labelledby="tab-service">
-        <input type="hidden" name="active_tab" value="service">
-        <h5 class="card-title">Manage project environment bindings</h5>
-        {% if t_all_services %}
-          {% render_table t_all_services %}
-        {% endif %}
+    <div class="tab-pane fade {% if active == "service" %}show active{% endif %}" id="service" role="tabpanel" aria-labelledby="tab-service">
+      <h5 class="card-title">Manage project environment bindings</h5>
+      {% if t_all_services %}
+        {% render_table t_all_services %}
+      {% endif %}
     </div>
   </div>
   {% include 'apply_cancel.html' %}
 </form>
+
+<script>
+  $("#projectConfigTabs li a").on("click", function () {
+    var tab = $( this ).attr("id")
+    console.log( tab )
+
+    if (tab == "tab-collaboration") {
+      $("#active_tab").attr("value",  "collaboration")
+      $("#search_field").attr("placeholder",  "Search name or username")
+      $("#search_field").attr("value", $("#s_collaboration").attr("value") )
+	    //enable
+    } else if (tab == "tab-meta") {
+      $("#active_tab").attr("value",  "meta")
+      $("#search_field").attr("placeholder",  "Search")
+      $("#search_field").attr("value", "" )
+	    //disable
+    } else if (tab == "tab-service") {
+      $("#active_tab").attr("value",  "service")
+      $("#search_field").attr("placeholder",  "Search service")
+      $("#search_field").attr("value", $("#s_service").attr("value") )
+	    //enable
+    }
+    console.log( $("#active_tab").attr("value") )
+  })
+</script>
 {% endblock %}
 
 {% block main_content_right %}
   {% include 'project/hint_config.html' %}
 {% endblock %}
+
+{% block navsearch %}
+<form class="d-flex" action="{% url 'project:c_search' project.id %}" method="post">
+  {% csrf_token %}
+  <input type="hidden" name="active_tab" id="active_tab" value="{{ active }}">
+  <input type="hidden" id="s_collaboration" value="{{ user.search.project_collaborator }}">
+  <input type="hidden" id="s_service" value="{{ user.search.project_service }}">
+  <input class="form-control me-2" type="search" id="search_field" name="pattern"
+    {% if active == "collaboration" %}
+      value="{{ user.search.project_collaborator }}" placeholder="Search name or username"
+    {% elif active == "service" %}
+      value="{{ user.search.project_service }}" placeholder="Search service"
+    {% else %}
+      value="" placeholder="Search"
+    {% endif %}
+      aria-label="Search">
+  <button class="btn btn-outline-secondary" type="submit" name="button" value="search">Search</button>
+</form>
+{% endblock %}
+
+
