--- a/kooplexhub/hub/templates/project/join.html
+++ b/kooplexhub/hub/templates/project/join.html
@@ -26,11 +26,7 @@
 {% block navsearch %}
 <form class="d-flex" action="{% url 'project:j_search' %}" method="post">
   {% csrf_token %}
-  <input class="form-control me-2" type="search" name="project_or_creator" placeholder="Search project/creator" 
-    {% if search_value %}  
-      value="{{ search_value }}" 
-    {% endif %}  
-      aria-label="Search">
+  <input class="form-control me-2" type="search" name="project_or_creator" placeholder="Search project/creator" value="{{ user.search.project_join }}" aria-label="Search">
   <button class="btn btn-outline-secondary" type="submit" name="button" value="search">Search</button>
 </form>
 {% endblock %}
