--- a/kooplexhub/hub/templates/project/manage.html
+++ b/kooplexhub/hub/templates/project/manage.html
@@ -27,11 +27,7 @@
 {% block navsearch %}
 <form class="d-flex" action="{% url 'project:sh_search' %}" method="post">
   {% csrf_token %}
-  <input class="form-control me-2" type="search" name="project" placeholder="Search project" 
-    {% if search_value %}  
-      value="{{ search_value }}" 
-    {% endif %}  
-      aria-label="Search">
+  <input class="form-control me-2" type="search" name="project" placeholder="Search project" value="{{ user.search.project_showhide }}" aria-label="Search">
   <button class="btn btn-outline-secondary" type="submit" name="button" value="search">Search</button>
 </form>
 {% endblock %}
