image type project/report/api can_createimage fix published report acl-s on collab management search external rsa keypair generation get rid of pytea api dropshadow for cards 3 col indexpage

--- a/kooplexhub/hub/templates/container/hint_list.html
+++ b/kooplexhub/hub/templates/container/hint_list.html
@@ -1,4 +1,4 @@
-<div class="card"> 
+<div class="card shadow p-3 mb-5 bg-light rounded"> 
   <h6 class="card-head">Environment</h6>
   <div class="card-body">
 	  <p>Environment (aka Service) is a virtualized context with prepared software stack. <br>
