--- a/kooplexhub/hub/templates/container/new.html
+++ b/kooplexhub/hub/templates/container/new.html
@@ -1,5 +1,5 @@
-<div class="modal fade" id="container-new" data-bs-keyboard="false" tabindex="-1" aria-labelledby="titleNewContainer" aria-hidden="true">
-  <div class="modal-dialog">
+<div class="modal fade shadow" id="container-new" data-bs-keyboard="false" tabindex="-1" aria-labelledby="titleNewContainer" aria-hidden="true">
+  <div class="modal-dialog shadow bg-light p-1 mb-5  rounded">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="titleNewContainer">Name your new service environment</h5>
