--- a/kooplexhub/hub/templates/container/newimage.html
+++ b/kooplexhub/hub/templates/container/newimage.html
@@ -1,15 +1,15 @@
-<div class="modal fade shadow" id="project-new" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="titleNewProject" aria-hidden="true">
-  <div class="modal-dialog modal-lg bg-light p-1 mb-5 rounded">
+<div class="modal fade shadow" id="image-new" data-bs-keyboard="false" tabindex="-1" aria-labelledby="newImage" aria-hidden="true">
+  <div class="modal-dialog shadow bg-light p-1 mb-5  rounded">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="titleNewProject">Describe your new project</h5>
+        <h5 class="modal-title" id="newImage">Create a new service image</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <form id="project_new" class="form-horizontal" action="{% url 'project:new' %}" method="post">
+      <form id="service_new" class="form-horizontal" action="{% url 'service:newimage' %}" method="post">
        {% csrf_token %}
         <div class="modal-body">
           <table>
-            {{ f_project_meta.as_table }}
+	    {{ f_newimage.as_table }}
           </table>
           <input type="hidden" name="user_id" value="{{ user.id }}">
         </div>
