--- a/kooplexhub/hub/templates/footer_right.html
+++ b/kooplexhub/hub/templates/footer_right.html
@@ -1,4 +1,4 @@
-<div class="card"> 
+<div class="card shadow p-3 mb-5 bg-light rounded"> 
 	<div class="card-body">
 		<p><span >"The sooner you call for help, the sooner it arrives!"</span> - <a href="mailto:kooplex@complex.elte.hu"><strong>kooplex at complex.elte.hu.</strong></a>
 		<p>To report problems or buggy features please file an issue at <br> <a href="https://github.com/kooplex/kooplex-hub" target="_blank" style="color: #99979c"><strong>https://github.com/kooplex/kooplex-hub</strong></a>
