--- a/kooplexhub/hub/templates/index.html
+++ b/kooplexhub/hub/templates/index.html
@@ -1,82 +1,58 @@
 {% extends "layout.html" %}
 
-{% block header_extra %}
-<link
-    href="https://cdn.pydata.org/bokeh/release/bokeh-1.0.4.min.css"
-    rel="stylesheet" type="text/css">
-<link
-    href="https://cdn.pydata.org/bokeh/release/bokeh-widgets-1.0.4.min.css"
-    rel="stylesheet" type="text/css">
-<link
-    href="https://cdn.pydata.org/bokeh/release/bokeh-tables-1.0.4.min.css"
-    rel="stylesheet" type="text/css">
 
-<script src="https://cdn.pydata.org/bokeh/release/bokeh-1.0.4.min.js"></script>
-<script src="https://cdn.pydata.org/bokeh/release/bokeh-widgets-1.0.4.min.js"></script>
-<script src="https://cdn.pydata.org/bokeh/release/bokeh-tables-1.0.4.min.js"></script>
-<script>
-//fetch('https://kooplex.vo.elte.hu/stats/hourly')
-//        .then(function(response) { return response.json(); })
-//    .then(function(item) { Bokeh.embed.embed_item(item); })
-//fetch('https://kooplex-fiek.elte.hu/wtat/stats/kep')
-//        .then(function(response) { return response.json(); })
-//    .then(function(item) { Bokeh.embed.embed_item(item); })
-//fetch('https://kooplex.vo.elte.hu/stats/tourly')
-//        .then(function(response) { return response.json(); })
-//    .then(function(item) { Bokeh.embed.embed_item(item); })
-</script>
-{% endblock %}
-
-{% block main_content_left %}
-  <div class="card"> 
-    <h6 class="card-title">Powered by</h6>
-    <div class="card-body">
-      <img src="/static/content/dockerlogo.png" style="height: 40px; padding-right: 10px" alt="docker">
-      <img src="/static/content/kuberneteslogo.png" style="height: 40px; padding-right: 10px" alt="k8s">
-      <img src="/static/content/django.png" style="height: 40px; padding-right: 10px" alt="django">
-      <img src="/static/content/Nginx-Logo.png" style="height: 40px; padding-right: 10px" alt="nginx">
-      <img src="/static/content/jupyter.png" style="height: 40px; padding-right: 10px" alt="jupyter">
-      <img src="/static/content/rstudio.png" style="height: 40px; padding-right: 10px" alt="rstudio">
-      <img src="/static/content/logos/gitea.png" style="height: 40px; padding-right: 10px" alt="singularity">
-      <img src="/static/content/logos/seafile.png" style="height: 40px; padding-right: 10px" alt="singularity">
-      <img src="/static/content/slurm.png" style="height: 40px; padding-right: 10px" alt="slurm">
-      <img src="/static/content/singularity.png" style="height: 40px; padding-right: 10px" alt="singularity">
-    </div>
-  </div>
-{% endblock %}
-
-{% block main_content_center %}
-  <div class="jumbotron" style="box-shadow: 5px 10px 8px #888888; padding: 10px;">
+{% block body %}
+  <div class="body-content">
     <div class="row">
-      <div class="col-md-12">
-        <img src="/static/content/logo-transparent.png" style="transform: translate(0, 22px); width: 350px;" alt="kooplex">
-	<!-- platform specific -->
-        <img src="/static/content/VEO-logo-trp.png" style="width: 200px;" alt="VEO test platform">
-	<!-- platform specific -->
+      <div class="col-md-3">
+         {% include 'message.html' %}
+         <div class="card shadow p-3 mb-5 bg-light rounded"> 
+           <h6 class="card-title">Powered by</h6>
+           <div class="card-body">
+             <img src="/static/content/dockerlogo.png" style="height: 40px; padding-right: 10px" alt="docker">
+             <img src="/static/content/kuberneteslogo.png" style="height: 40px; padding-right: 10px" alt="k8s">
+             <img src="/static/content/django.png" style="height: 40px; padding-right: 10px" alt="django">
+             <img src="/static/content/Nginx-Logo.png" style="height: 40px; padding-right: 10px" alt="nginx">
+             <img src="/static/content/jupyter.png" style="height: 40px; padding-right: 10px" alt="jupyter">
+             <img src="/static/content/rstudio.png" style="height: 40px; padding-right: 10px" alt="rstudio">
+             <img src="/static/content/logos/gitea.png" style="height: 40px; padding-right: 10px" alt="singularity">
+             <img src="/static/content/logos/seafile.png" style="height: 40px; padding-right: 10px" alt="singularity">
+             <img src="/static/content/slurm.png" style="height: 40px; padding-right: 10px" alt="slurm">
+             <img src="/static/content/singularity.png" style="height: 40px; padding-right: 10px" alt="singularity">
+           </div>
+         </div>
       </div>
-    </div>
-  </div>
-  
-  <!--h2> CPU Usage of Kooplex.vo </h2-->
-  <div id="myplot4"> </div>
-  
-  <div class="jumbotron" style="padding-top: 10px; padding-bottom: 10px; background-color: #bdbdbd; box-shadow: 5px 10px 8px #888888;">
-    <div class="row">
-      <div class="col-md-7">
-        <div style="width: 100%;">
-          {% comment %} {% include "slideshow.html" %} {% endcomment %}
-          <img class="d-block w-100" src="/static/content/Kooplex-frontpage.png" alt="Access private cloud file system, share data and results">
+      <div class="col-md-6">
+        <div class="jumbotron shadow p-3 mb-5 bg-light rounded">
+          <div class="row">
+            <div class="col-md-12">
+              <img src="/static/content/logo-transparent.png" style="transform: translate(0, 22px); width: 350px;" alt="kooplex">
+              <!-- platform specific -->
+              <img src="/static/content/VEO-logo-trp.png" style="width: 200px;" alt="VEO test platform">
+              <!-- platform specific -->
+            </div>
+          </div>
+        </div>
+        <div class="jumbotron shadow p-3 mb-5 bg-light rounded">
+          <div class="row">
+            <div class="col-md-7">
+              <div style="width: 100%;">
+                {% comment %} {% include "slideshow.html" %} {% endcomment %}
+                <img class="d-block w-100" src="/static/content/Kooplex-frontpage.png" alt="Access private cloud file system, share data and results">
+              </div>
+            </div>
+            <div class="col-md-5" style="text-align: right">
+              <div class="row">
+                Dive into various fields of computational physics, modeling and numerical analysis of data with the help of Jupyter notebooks.
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="col-md-5" style="text-align: right">
-        <div class="row">
-          Dive into various fields of computational physics, modeling and numerical analysis of data with the help of Jupyter notebooks.
-        </div>
+      <div class="col-md-3">
+       {% include 'footer_right.html' %}
       </div>
     </div>
   </div>
 {% endblock %}
 
-{% block main_content_right %}
-  {% include 'footer_right.html' %}
-{% endblock %}
