--- a/kooplexhub/hub/templates/message.html
+++ b/kooplexhub/hub/templates/message.html
@@ -1,5 +1,5 @@
 {% if messages %}
-<div class="card"> 
+ <div class="card shadow p-3 mb-5 bg-light rounded"> 
   <div class="card-body">
     <h5 class="card-title">Messages</h5>
     {% for message in messages %}
