--- a/kooplexhub/hub/templates/project/hint_join.html
+++ b/kooplexhub/hub/templates/project/hint_join.html
@@ -1,4 +1,4 @@
-<div class="card"> 
+<div class="card shadow bg-light p-1 mb-5  rounded"> 
   <h6 class="card-head">Project</h6>
   <div class="card-body">
     <p>In order to collaborate join a public project or create a collaboration by configuring your project.  </p>
