--- a/kooplexhub/hub/templates/project/hint_list.html
+++ b/kooplexhub/hub/templates/project/hint_list.html
@@ -1,4 +1,4 @@
-<div class="card"> 
+<div class="card shadow p-3 mb-5 bg-light rounded"> 
   <h6 class="card-head">Project</h6>
   <div class="card-body">
     <p>Project abstracts study and knowledge. </p>
