--- a/kooplexhub/hub/templates/container/hint_config.html
+++ b/kooplexhub/hub/templates/container/hint_config.html
@@ -1,4 +1,4 @@
-<div class="card"> 
+<div class="card shadow p-3 mb-5 bg-light rounded">
   <h6 class="card-head">Environment</h6>
   <div class="card-body">
     <p>Projects can be bound to an environment. </p>
