--- a/kooplexhub/hub/templates/external_service/hint_repo.html
+++ b/kooplexhub/hub/templates/external_service/hint_repo.html
@@ -1,4 +1,4 @@
-<div class="card"> 
+<div class="card shadow bg-light p-1 mb-5  rounded"> 
   <h6 class="card-head">External resource</h6>
   <div class="card-body">
     <p>Gitea and GitHub are version control systems. </p>
