--- a/kooplexhub/hub/templates/external_service/versioncontrol.html
+++ b/kooplexhub/hub/templates/external_service/versioncontrol.html
@@ -5,10 +5,10 @@
 {% endblock %}
 
 {% block main_content_center %}
+    <div class="card shadow bg-light p-1 mb-5  rounded">
   {% load render_table from django_tables2 %}
   <form id="vcRepoForm" class="form-horizontal form-control" action="{% url 'service_external:commit_repo' %}" method="post">
     {% csrf_token %}
-    <div class="card">
       <div class="card-header">
         <h3>Repositories to clone</h3>
       </div>
@@ -18,10 +18,10 @@
       <div class="card-footer">
         {% include 'apply_cancel.html' with hide_cancel=True %}
       </div>
-    </div>
   </form>
+    </div>
 
-  <div class="card">
+  <div class="card shadow bg-light p-1 mb-5  rounded">
     <div class="card-header">
       <h3>Connected services</h3>
     </div>
@@ -30,52 +30,46 @@
         {% for s in reposervers %}
           {% with t=s|get_userz_vctoken:user %}
             <div class="card">
-              <div class="card-header">
-      	  <a href="{{ s.url }}" rel="noreferrer" target="_blank" role="button" class="btn btn-outline-secondary">{{ s.url }}</a>
-              </div>
-              <div class="card-body">
-              {% if t %}
-      	  <p class="card-text"><strong>Last updated:</strong> {{ t.last_used }}</p>
-              {% else %}
-      	  <p class="card-text"><strong>Note:</strong> Make sure you login to Seafile server so your account exists there as well and generate a token</p>
-              {% endif %}
-
 	      <form id="vc_details_{{ s.id }}" method="post" action="{% url 'service_external:vc_tokenmanagement' s.id %}">
                 {% csrf_token %}
-	        <input type="hidden" name="token_id" value="{{ t.id }}">
-                <table>
-                  <tr>
-	            <th><label for="id_name-{t.id}">Registered username: </label></th>
-		    <td><input type="text" name="username" value="{% if t %}{{ t.username }}{% else %}{{ user.username }}{% endif %}" id="id_name-{t.id}"></td>
-		  </tr>
-                  <tr>
-	            <th><label for="id_token-{t.id}">Generated token: </label></th>
-		    <td><input type="password" name="token" value="{% if t %}{{ t.token }}{% endif %}" placeholder="copied from git server" id="id_token-{t.id}"></td>
-		  </tr>
-                  <tr>
-	            <th><label for="id_rsa-{t.id}">Private RSA key: </label></th>
-		    <td><textarea name="rsa" placeholder="Private RSA key">{% if t %}{{ t.token }}{% endif %}</textarea></td>
-		  </tr>
-		</table>
-              </form>
+                <div class="card-header">
+                  <a href="{{ s.url }}" rel="noreferrer" target="_blank" role="button" class="btn btn-outline-secondary">{{ s.url }}</a>
+                </div>
+                <div class="card-body">
+                {% if t %}
+      	          <p class="card-text"><strong>Last updated:</strong> {{ t.last_used }}</p>
+                {% else %}
+	          <p class="card-text"><strong>Note:</strong> Make sure you login to {{ s.url}} and generate a token. An RSA key pair is to be generated for you and to be uploaded as kooplex-hub.</p>
+                {% endif %}
 
-      	</div>
-              <div class="card-footer">
-      	  <a href="{{ s.url }}" rel="noreferrer" target="_blank" role="button" class="btn btn-secondary"><span class="oi oi-external-link" aria-hidden="true"></span></a>
-              {% if t %}
-                <a href="{% url 'service_external:fs_refresh' t.id %}" role="button" class="btn btn-secondary" data-toggle="tooltip" title="Last updated: {{ t.last_used }}" data-placement="top">Refresh</a>
-                <div class="float-end">
-                  <a href="{% url 'service_external:vc_droptoken' t.id %}" role="button" class="btn btn-danger" data-toggle="tooltip" title="Drop token" data-placement="top">Drop token</a>
-                  <a href="{% url 'service_external:fs_resettoken' t.id %}" role="button" class="btn btn-danger" data-toggle="tooltip" title="Create a new token" data-placement="top">New token</a>
+	          <input type="hidden" name="token_id" value="{{ t.id }}">
+                  <table>
+                    <tr>
+	              <th><label for="id_name-{s.id}">Registered username: </label></th>
+	              <td><input type="text" name="username" value="{% if t %}{{ t.username }}{% else %}{{ user.username }}{% endif %}" id="id_name-{s.id}"></td>
+	            </tr>
+                    <tr>
+	              <th><label for="id_token-{t.id}">Generated token: </label></th>
+	              <td><input type="password" name="token" placeholder="copied from git server" id="id_token-{s.id}"></td>
+	            </tr>
+	          </table>
+      	        </div>
+                <div class="card-footer">
+      	          <a href="{{ s.url }}" rel="noreferrer" target="_blank" role="button" class="btn btn-secondary"><span class="oi oi-external-link" aria-hidden="true"></span></a>
+                  {% if t %}
+                    <a href="{% url 'service_external:vc_refresh' t.id %}" role="button" class="btn btn-secondary" data-toggle="tooltip" title="Last updated: {{ t.last_used }}" data-placement="top">Refresh</a>
+                    <div class="float-end">
+                      <button type="submit" class="btn btn-danger" name="button" value="updatetoken" data-toggle="tooltip" title="Create a new token" data-placement="top">Update token</button>
+                      <button type="submit" class="btn btn-danger" name="button" value="droptoken" data-toggle="tooltip" title="Drop token" data-placement="top">Drop token</button>
+                    </div>
+                  {% else %}
+                    <a href="#" role="button" class="btn btn-secondary disabled" data-toggle="tooltip" title="Disabled" data-placement="top">Refresh</a>
+                    <div class="float-end">
+                      <button type="submit" class="btn btn-danger" name="button" value="newtoken" data-toggle="tooltip" title="Create a new token" data-placement="top">New token</button>
+                    </div>
+                  {% endif %}
                 </div>
-              {% else %}
-                <a href="#" role="button" class="btn btn-secondary disabled" data-toggle="tooltip" title="Disabled" data-placement="top">Refresh</a>
-                <div class="float-end">
-                  <a href="#" role="button" class="btn btn-danger disabled" data-toggle="tooltip" title="Drop token" data-placement="top">Drop token</a>
-                  <a href="{% url 'service_external:fs_newtoken' s.id %}" role="button" class="btn btn-danger" data-toggle="tooltip" title="Create a new token" data-placement="top">New token</a>
-                </div>
-              {% endif %}
-              </div>
+              </form>
             </div>
           {% endwith %}
         {% endfor %}
@@ -89,3 +83,10 @@
   {% include 'external_service/hint_repo.html' %}
 {% endblock %}
 
+{% block navsearch %}
+<form class="d-flex" action="{% url 'service_external:vc_search' %}" method="post">
+  {% csrf_token %}
+  <input class="form-control me-2" type="search" name="repository" placeholder="Search repository" value="{{ user.search.external_repository }}" aria-label="Search">
+  <button class="btn btn-outline-secondary" type="submit" name="button" value="search">Search</button>
+</form>
+{% endblock %}
