--- a/kooplexhub/hub/templates/project/join.html
+++ b/kooplexhub/hub/templates/project/join.html
@@ -9,13 +9,17 @@
   
 <form id="project-manage" class="form-horizontal" action="{% url 'project:join' %}" method="post">
   {% csrf_token %}
+<div class="card shadow p-3 mb-5 bg-light rounded"> 
     <h5>Use the switch select those projects you want to join</h5>
+  <div class="card-body">
     {% if t_joinable.data|length > 0 %}
       {% render_table t_joinable %}
     {% else %}
       <p>You do not have any projects to join.</p>
     {% endif %}
     {% include 'apply_cancel.html' with apply='Join projects' %}
+  </div>
+</div>
 </form>
 {% endblock %}
 
