--- a/kooplexhub/hub/templates/report/hint_list.html
+++ b/kooplexhub/hub/templates/report/hint_list.html
@@ -1,4 +1,4 @@
-<div class="card"> 
+<div class="card shadow p-3 mb-5 bg-light rounded"> 
   <h6 class="card-head">Report</h6>
   <div class="card-body">
     <p>Reports can be open if report service is present and running. Creator may start and stop them.</p>
